--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'org.jetbrains.kotlin:kotlin-stdlib:1.7.10'
     }
 
 }
